@@ -110,6 +110,7 @@ extern bool secret_buffer_match_bytestr(secret_buffer_parse *p, char *data, size
  */
 extern SSize_t secret_buffer_sizeof_transcode(secret_buffer_parse *src, int dst_encoding);
 extern bool secret_buffer_transcode(secret_buffer_parse *src, secret_buffer_parse *dst);
+extern bool secret_buffer_copy_to(secret_buffer_parse *src, SV *dst_sv, int encoding, bool append);
 
 /* Create a new Crypt::SecretBuffer object with a mortal ref and return its secret_buffer
  * struct pointer.
