@@ -32,6 +32,8 @@ is \%Crypt::SecretBuffer::C_API,
          'SSize_t secret_buffer_sizeof_transcode(secret_buffer_parse *src, int dst_encoding)',
       secret_buffer_transcode =>
          'bool secret_buffer_transcode(secret_buffer_parse *src, secret_buffer_parse *dst)',
+      secret_buffer_copy_to =>
+         'bool secret_buffer_copy_to(secret_buffer_parse *src, SV *dst_sv, int encoding, bool append)',
       secret_buffer_new =>
          'secret_buffer * secret_buffer_new(size_t capacity, SV **ref_out)',
       secret_buffer_from_magic =>
